Run multiple gameticks concurrently. Add loadtest script